--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "fast-glob": "^3.2.4",
     "helmet": "^4.1.1",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.2",
