--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "cookie-parser": "^1.4.5",
+    "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fast-glob": "^3.2.4",
