--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "@types/node-fetch": "^2.5.7",
+    "@types/openpgp": "^4.4.14",
     "cookie-parser": "^1.4.5",
     "deepmerge": "^4.2.2",
     "express": "^4.17.1",
@@ -25,7 +27,10 @@
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
+    "openpgp": "^4.10.8",
     "string-replace-async": "^2.0.0",
+    "tedis": "^0.1.12",
     "yaml": "^2.0.0-1"
   },
   "devDependencies": {
