--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "openpgp": "^4.10.8",
     "string-replace-async": "^2.0.0",
     "tedis": "^0.1.12",
+    "ua-parser-js": "^0.7.22",
     "yaml": "^2.0.0-1"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.2",
+    "@types/ua-parser-js": "^0.7.33",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
