--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "@maxmind/geoip2-node": "^2.0.1",
     "@types/node-fetch": "^2.5.7",
     "@types/openpgp": "^4.4.14",
     "cookie-parser": "^1.4.5",
