--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oldskool-server",
   "version": "0.0.0",
   "scripts": {
+    "test": "npx jest ",
     "schema": "typescript-json-schema --required --noExtraProps --out recipe.schema.json tsconfig.json IRecipeFragmentDef",
     "build": "tsc --build tsconfig.prod.json",
     "start": "node ./dist --env=production",
@@ -40,11 +41,14 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.2",
     "@types/ua-parser-js": "^0.7.33",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   }
 }
