--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "oldskool-server",
+  "repository": "https://github.com/oldskoolsh/server",
+  "license": "Apache-2.0",
   "version": "0.0.0",
   "scripts": {
     "test": "npx jest ",
@@ -19,8 +21,6 @@
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "@maxmind/geoip2-node": "^2.0.1",
-    "@types/node-fetch": "^2.5.7",
-    "@types/openpgp": "^4.4.14",
     "cookie-parser": "^1.4.5",
     "deepmerge": "^4.2.2",
     "express": "^4.17.1",
@@ -39,13 +39,15 @@
     "yaml": "^2.0.0-1"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.7",
+    "@types/openpgp": "^4.4.14",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "~26.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.2",
     "@types/ua-parser-js": "^0.7.33",
-    "jest": "^26.6.3",
+    "jest": "~26.0",
     "nodemon": "^2.0.6",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
