--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "@maxmind/geoip2-node": "^2.0.1",
+    "@types/highlight.js": "^10.1.0",
     "cookie-parser": "^1.4.5",
     "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fast-glob": "^3.2.4",
     "helmet": "^4.1.1",
+    "highlight.js": "^10.4.0",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.2",
     "morgan": "^1.10.0",
