--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "highlight.js": "^10.4.0",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.2",
+    "linkify-urls": "^3.1.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "openpgp": "^4.10.8",
@@ -41,13 +42,14 @@
     "yaml": "^2.0.0-1"
   },
   "devDependencies": {
-    "@types/node-fetch": "^2.5.7",
-    "@types/openpgp": "^4.4.14",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/jest": "~26.0",
+    "@types/linkify-urls": "^3.1.1",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.2",
+    "@types/node-fetch": "^2.5.7",
+    "@types/openpgp": "^4.4.14",
     "@types/ua-parser-js": "^0.7.33",
     "jest": "~26.0",
     "nodemon": "^2.0.6",
