--- a/package.json
+++ b/package.json
@@ -44,16 +44,16 @@
   "devDependencies": {
     "@types/cookie-parser": "^1",
     "@types/express": "^4",
-    "@types/jest": "~26",
+    "@types/jest": "~27",
     "@types/morgan": "^1.7",
     "@types/node": "^14",
     "@types/node-fetch": "^2",
     "@types/openpgp": "^4",
     "@types/ua-parser-js": "^0",
     "copyright-header": "^0",
-    "jest": "~26",
+    "jest": "^27",
     "nodemon": "^2",
-    "ts-jest": "^26",
+    "ts-jest": "^27",
     "ts-node": "^9",
     "typescript": "^4"
   }
