add prometheus metrics via express-prom-bundle

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "deepmerge": "^4",
     "express": "^4",
     "express-async-errors": "^3",
+    "express-prom-bundle": "^6.4.1",
     "fast-glob": "^3",
     "helmet": "^4",
     "highlight.js": "^10",
@@ -35,6 +36,7 @@
     "morgan": "^1.7",
     "node-fetch": "^2",
     "openpgp": "^4",
+    "prom-client": "^14.0.1",
     "string-replace-async": "^2",
     "tedis": "^0",
     "typescript-json-schema": "^0",
